[package]
name = "trouw-gordijn"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
once_cell = "1"
thiserror = "1"
dotenvy = "0.15"
time = { version = "0.3", features = ["macros"] }
anyhow = "1"

# Optional built-in HTTPS with Let's Encrypt (enable with --features acme)
tokio-rustls = { version = "0.25", optional = true }
axum-server = { version = "0.6", optional = true, features = ["tls-rustls"] }
rustls-acme = { version = "0.10", optional = true, features = ["tokio", "axum"] }

[features]
default = []
acme = ["tokio-rustls", "axum-server", "rustls-acme"]
